fix: Orange indicator contrast

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -199,7 +199,7 @@ $input-height: calc(1.5em + 0.75rem);
 	--indicator-dark-blue: var(--blue-800);
 	--indicator-green: var(--green-600);
 	--indicator-yellow: var(--yellow-200);
-	--indicator-orange: var(--orange-500);
+	--indicator-orange: var(--orange-400);
 	--indicator-red: var(--red-500);
 	--indicator-gray: var(--gray-500);
 	--indicator-light-gray: var(--gray-300);
